# herd_immunity_project

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  TestCoverage  TestCoverage.cpp  a.out  commit_history.txt  disease_details.csv  disease_in.ini  disease_stats.csv  main.cpp  simulation plot graph.csv  simulation.cpp  simulation.h
